TestRepo2/src/objects/REST_Queue_Message__c.object
<CustomObject>
    <description>POS Project: stores outbound message request to be processed by a Batch Queue Processor</description>
    <fields>
        <fullName>FailedCount__c</fullName>
        <label>Failed Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>API name of the field that stores the External ID corresponding to the object being synched.</description>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastProcessedTime__c</fullName>
        <label>Last Processed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <description>Saleforce ID of the Object Record</description>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>API Name of the SFDC Object that is being synched</description>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestBody__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_apiArguments__c</fullName>
        <label>Request apiArguments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_apiPath__c</fullName>
        <label>Request apiPath</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <description>stores the response from the latest processing</description>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready-to-Process</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processed-Successfully</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed-Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed-3-Attempts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>REST Queue Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ObjectId__c</columns>
        <columns>NAME</columns>
        <columns>LastProcessedTime__c</columns>
        <columns>Request_apiPath__c</columns>
        <columns>Status__c</columns>
        <columns>FailedCount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Specific_Record</fullName>
        <columns>ObjectId__c</columns>
        <columns>NAME</columns>
        <columns>LastProcessedTime__c</columns>
        <columns>Request_apiPath__c</columns>
        <columns>Status__c</columns>
        <columns>FailedCount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>postMagentoCallDocumenta0zA0000008CrcHIAS</value>
        </filters>
        <label>Specific Record</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>With_details</fullName>
        <columns>NAME</columns>
        <columns>LastProcessedTime__c</columns>
        <columns>Request_apiPath__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>FailedCount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready-to-Process</value>
        </filters>
        <label>With details</label>
    </listViews>
    <nameField>
        <label>REST Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REST Queue Message</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>